# docscope

./: .docscope.yaml  .env.production  .gitignore  CLAUDE.md  Dockerfile  GIT_INSTRUCTIONS.md  IMPLEMENTATION_PLAN.md  INSTALLATION.md  LICENSE  MILESTONE_STATUS.md  README.md  docker-compose.yml  install.sh  nginx.conf  push-to-github.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  verify_milestone1.py  verify_milestone10.py  verify_milestone2.py  verify_milestone3.py  verify_milestone3_structure.py  verify_milestone4.py  verify_milestone5.py  verify_milestone6.py  verify_milestone7.py  verify_milestone8.py  verify_milestone9.py
.github/workflows/: ci.yml
docscope/: __init__.py  __main__.py  cli.py  scanner.py  search.py  server.py  storage.py
docscope/api/: __init__.py  app.py  config.py  dependencies.py  models.py
docscope/api/routers/: __init__.py  categories.py  documents.py  filesystem.py  health.py  scanner.py  search.py  tags.py  websocket.py
docscope/cli/: __init__.py  __main__.py  cli.py
docscope/cli/commands/: __init__.py  config.py  database.py  export.py  plugins.py  scan.py  search.py  serve.py  stats.py  watch.py
docscope/core/: __init__.py  config.py  exceptions.py  logging.py  models.py
docscope/features/: __init__.py  export.py  monitor.py  watcher.py
docscope/plugins/: __init__.py  base.py  exceptions.py  loader.py  manager.py  registry.py
docscope/plugins/builtin/: __init__.py  markdown_processor.py  pdf_scanner.py  slack_notifier.py
docscope/scanner/: __init__.py  format_handler.py  handlers.py  scanner.py
docscope/search/: __init__.py  engine.py  indexer.py  query_parser.py  ranker.py  schema.py  suggestions.py
docscope/storage/: __init__.py  database.py  models.py  repository.py  storage.py
docscope/web/: __init__.py  app.py
docscope/web/static/: index.html
docscope/web/static/css/: style.css
docscope/web/static/css/themes/: dark.css  light.css
docscope/web/static/js/: api.js  app.js  components.js  config.js  dialogs.js  directory-picker.js  pages.js  utils.js
kubernetes/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  pvc.yaml  rbac.yaml  secrets.yaml  service.yaml  statefulset.yaml
scripts/: backup.sh  deploy.sh  git-setup.sh
tests/: __init__.py  test_api.py  test_cli.py  test_cli_basic.py  test_config.py  test_database.py  test_features.py  test_formats.py  test_logging.py  test_plugins.py  test_scanner.py  test_search.py  test_storage.py  test_web.py
